--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -4,7 +4,7 @@
     top: 0;
     width: 100%;
     height: 3.5rem;
-    background: rgb(61, 120, 209);
+    background: #537ae7;
     padding: 0 1rem;
     display: flex;
     align-items: center;
@@ -38,5 +38,5 @@
 .main-navigation_items a:hover,
 .main-navigation_items a:active,
 .main-navigation_items a.active {
-    color: yellow;
+    color: rgb(248, 240, 130);
 }
