--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -4,39 +4,55 @@
     top: 0;
     width: 100%;
     height: 3.5rem;
-    background: #537ae7;
-    padding: 0 1rem;
+    background: #5101d1;
+    padding: 0 2rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
 }
 
-.main-navigation_logo h1{
-    margin: 0;
-    font-size: 1.5rem;
+.main-navigation_logo h1 {
+  margin: 0;
+  font-size: 1.5rem;
+  color: #dfcefc;
 }
 
 .main-navigation_items {
-    margin-left: 1.5rem;
-} 
+  margin-left: 1.5rem;
+}
 
 .main-navigation_items ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  align-items: center;
 }
 
 .main-navigation_items li {
-    margin: 0 1rem;
+  margin: 0 1rem;
 }
 
-.main-navigation_items a {
-    text-decoration: none;
-    color: black;
+.main-navigation_items a,
+.main-navigation_items button {
+  text-decoration: none;
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border: none;
+  font: inherit;
+  background: transparent;
+  cursor: pointer;
+  vertical-align: middle;
+  margin: 0;
 }
 
 .main-navigation_items a:hover,
 .main-navigation_items a:active,
-.main-navigation_items a.active {
-    color: rgb(248, 240, 130);
+.main-navigation_items a.active,
+.main-navigation_items button:hover,
+.main-navigation_items button:active {
+  background: #ffffff;
+  color: #5101d1;
+  border-radius: 5px;
 }
